[tool.poetry]
name = "investpy"
version = "1.1.0"
description = ""
authors = ["Alvaro Bartolome <alvarobdc@yahoo.com>", "Mikhail Krassavin <mikhail.krassavin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Unidecode = "^1.3.6"
pandas = "^1.5.1"
lxml = "^4.9.1"
requests = "^2.28.1"
pytz = "^2022.5"
numpy = "^1.23.4"
cloudscraper = "^1.2.64"

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"
black = "^22.10.0"
pylint = "^2.15.5"
pylint-plugin-utils = "^0.7"
isort = "^5.10.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^3.4.3"
recommonmark = "^0.7.1"
furo = "^2021.4.11b34"

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonVersion = "3.9"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.main]
load-plugins = [
    "pylint.extensions.bad_builtin",
    "pylint.extensions.check_elif",
]
jobs = 0
disable = [
    "missing-function-docstring", 
    "missing-class-docstring",
    "missing-module-docstring",
    "line-too-long",
    "bare-except",
    "fixme",
    "protected-access",
    "invalid-name",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-ancestors",
    "no-member",
    "wrong-import-position"
]

[tool.pylint.deprecated_builtins]
bad-functions = ["map", "filter", "apply", "reduce"]

[tool.pytest.ini_options]
pythonpath = ["investpy"]
